# Kairos_Main_Project

./: README.md
AGV/CODE_AGV/: README.md  cam_add.py  cam_add_2.py
AGV/CODE_AGV/Calibration_code/: cal_param.py  hsv_con.py
AGV/CODE_AGV/Line_tracing_python/: LED_set.py  line_trace.py  test_agv.py
AGV/CODE_AGV/agv_line_tracing/: package.xml  setup.cfg  setup.py
AGV/CODE_AGV/cam_ws/: check_graph.py  inference.py  udp_client.py
AGV/CODE_AGV/cam_ws/install/: local_setup.sh  (+1 more)
AGV/CODE_AGV/cam_ws/src/projection/: package.xml  setup.py
AGV/CODE_AGV/cam_ws/src/projection/projection/: image_pub.py  lidar.py  projector.py
AGV/CODE_AGV/ros2_cv_cam/: YOLO_sub.py  webcam_pub.py  webcam_sub.py
AGV/CODE_AGV/ros2_cv_webcam/: setup.py  setup.py.save
AGV/CODE_AGV/sensor_fusion/: cam_coor.py
AGV/trees_ws/: robot_home.py  tree_example.py
AGV/trees_ws/install/: local_setup.sh  setup.sh
AGV/trees_ws/log/: latest_build  latest_mixin
PLC/2024.11.11.Fin_Project/: 2024.11.11.Fin_Project  2024.11.11.Fin_Project.xgwx  2024.11.11.Fin_Project.xgwx_bkx0  2024.11.11.Fin_Project.xgwx_bkx1  2024.11.11.Fin_Project.xgwx_bkx2
RobotArm/QR_CODE/: QR_Create.py
RobotArm/QR_CODE/QR_Images/: QR_Code.docx
RobotArm/QR_CODE/QR_detect/: setup.cfg  setup.py
RobotArm/TurtleArm/arm_ws/: pump_control.py  pump_joint_control.py  scservo_control.py  scsservo_read.py  scsservo_write.py  scsservo_write.py.save  udp_server.py
WEB/: web_db_test.html  web_db_test.py  web_test.html  web_test.py
WEB/db_project/: app.py  books.db  check_db.py  dbcreate.py
WEB/db_project/templates/: index.html
(+538 files in other folders)
